# arb

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  clippy.toml  implementation-plan.md  plan.md  rust-toolchain.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  verifiable-build.yml
analytics/: Cargo.toml
analytics/corpus/: README.md  sample.json
analytics/dashboards/: grafana-arbit-health.json
analytics/src/: backtest.rs  corpus.rs  main.rs  replay.rs  report.rs
bot/arb-bot/: Cargo.toml
bot/arb-bot/src/: lib.rs  main.rs
bot/arb-bot/src/detection/: cache.rs  cycle.rs  decode.rs  graph.rs  grpc.rs  metrics.rs  mod.rs  model.rs  reconnect.rs
bot/arb-bot/src/executor/: config.rs  facade.rs  jito.rs  landing_loop.rs  mod.rs  presim.rs  regions.rs  registry.rs  setup.rs  tip.rs  types.rs
bot/arb-bot/src/metrics/: alerts.rs  econ.rs  exporter.rs  health.rs  latency.rs  mod.rs  pnl.rs  registry.rs  slippage.rs  types.rs
bot/arb-bot/src/signer/: alert.rs  caps.rs  error.rs  keychain.rs  killswitch.rs  metrics.rs  mod.rs  presign.rs  sidecar.rs  sweeper.rs  validate.rs
bot/arb-bot/src/sizing/: mod.rs
bot/arb-bot/src/txbuilder/: alt.rs  compute.rs  error.rs  layout.rs  limits.rs  message.rs  mod.rs  preflight.rs  sellsim.rs  tip.rs  token2022.rs  vet.rs  whirlpool.rs  wsol.rs
bot/arb-signer/: Cargo.toml
bot/arb-signer/src/: main.rs
crates/arb-config/: Cargo.toml
crates/arb-config/src/: features.rs  lib.rs  limits.rs  loader.rs  program_ids.rs  providers.rs  secrets.rs
crates/arb-math/: Cargo.toml
crates/arb-math/src/: cpmm.rs  cycle.rs  damm_v2.rs  dlmm.rs  fees.rs  lib.rs  mul_div.rs  optimal.rs  policy.rs  raydium_clmm.rs  rounding.rs  search.rs  u256.rs  venue.rs  whirlpool.rs
crates/arb-types/: Cargo.toml
crates/arb-types/src/: lib.rs
endpoint/: chainstack-api.md
infra/: deny.toml
infra/audit/: verify-integrity.sh
infra/config/: limits.toml  program_ids.toml  providers.toml
infra/scripts/: gen-program-keypair.sh  install-toolchain.sh  verify-config.sh
infra/toolchain/: versions.toml
onchain/: README.md
onchain/arb-program/: Cargo.toml  build-verifiable.sh
onchain/arb-program/src/: allowlist.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  token2022.rs  trust.rs
onchain/arb-program/src/adapters/: meteora_damm_v2.rs  meteora_dlmm.rs  mod.rs  orca_whirlpool.rs  pumpswap.rs  raydium_clmm.rs  raydium_cpmm.rs
ops/: SUPPLY_CHAIN.md
ops/config/: killswitch.toml  signer.toml
ops/runbooks/: deploy_upgrade.md  killswitch_recovery.md
ops/scripts/: deploy_squads.sh  rotate_hot_key.sh  verify_build.sh
secrets/: README.md
tests/litesvm-tests/: Cargo.toml
tests/litesvm-tests/src/: lib.rs
tests/litesvm-tests/tests/: closure.rs  cu_budget.rs  litesvm_unit.rs  m1_gate.rs  program_exec.rs  real_venue_meteora_damm_v2.rs  real_venue_meteora_dlmm.rs  real_venue_orca_whirlpool.rs  real_venue_raydium_clmm.rs  real_venue_raydium_cpmm.rs  rounding_mirror_fuzz.rs  smoke.rs  surfpool_integration.rs  surfpool_real_venue.rs  t22_fee.rs  token2022_filter.rs  triangle_gate.rs  trust_boundary.rs
tests/litesvm-tests/tests/common/: mod.rs
tests/litesvm-tests/tests/rv_common/: mod.rs
tests/scripts/: chainstack_smoke.sh  cs_dump.py  dump_clmm.py  dump_damm_v2.py  dump_dlmm.py  dump_orca.py  dump_raydium_cpmm.py  run_surfpool.sh
tests/swap-harness/: Cargo.toml
tests/swap-harness/src/: lib.rs
